# ServiceAtlas

./: .gitignore  README.md  requirements.txt  run.py  services.yaml
app/: __init__.py  config.py  database.py  main.py
app/api/: __init__.py  dependency.py  discovery.py  gateway.py  monitor.py  registry.py
app/core/: __init__.py  proxy.py
app/models/: __init__.py  dependency.py  route.py  service.py
app/schemas/: __init__.py  dependency.py  route.py  service.py
app/services/: __init__.py  dependency.py  discovery.py  gateway.py  health.py  preload.py  registry.py
app/web/: __init__.py  routes.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: index.js
frontend/src/components/: AppFooter.vue  LanguageSwitcher.vue  NavBar.vue
frontend/src/locales/: en-US.js  index.js  zh-CN.js
frontend/src/router/: index.js
frontend/src/utils/: basePath.js
frontend/src/views/: Dashboard.vue  Services.vue  Topology.vue
sdk/: README.md  pyproject.toml
sdk/serviceatlas_client/: __init__.py  client.py  decorators.py
static/css/: style.css
static/js/: main.js
templates/: base.html  dashboard.html  services.html  topology.html
