[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "serviceatlas-client"
version = "1.0.0"
description = "ServiceAtlas 服务注册中心 Python 客户端 SDK"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"}
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
fastapi = [
    "fastapi>=0.95.0",
]

[tool.setuptools.packages.find]
where = ["."]
